--- a/blogpad/blogpad-st/pom.xml
+++ b/blogpad/blogpad-st/pom.xml
@@ -43,6 +43,12 @@
             <scope>test</scope>
         </dependency>        
         <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.json</artifactId>
+            <version>1.1.4</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>5.6.2</version>
