--- a/blogpad/content/pom.xml
+++ b/blogpad/content/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion> 
   <description>Jakarta EE 8 + MicroProfile 3.X blank template with System tests</description>
   <groupId>com.airhacks</groupId>
-  <artifactId>blogpad-service</artifactId>
+  <artifactId>content-service</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <modules>
-    <module>blogpad</module>
-    <module>blogpad-st</module>
+    <module>content</module>
+    <module>content-st</module>
   </modules>
 </project>
