590_content_docker_migration

--- a/blogpad/content/content/Dockerfile
+++ b/blogpad/content/content/Dockerfile
@@ -1,2 +1,2 @@
-FROM airhacks/glassfish
-COPY ./target/blogpad.war ${DEPLOYMENT_DIR}
+FROM airhacks/wildfly
+COPY ./target/content.war ${DEPLOYMENT_DIR}
