--- a/blogpad/content/content-st/pom.xml
+++ b/blogpad/content/content-st/pom.xml
@@ -41,7 +41,13 @@
             <artifactId>cxf-rt-rs-mp-client</artifactId>
             <version>3.3.6</version>
             <scope>test</scope>
-        </dependency>        
+        </dependency>       
+        <dependency>
+            <groupId>io.smallrye.config</groupId>
+            <artifactId>smallrye-config</artifactId>
+            <version>1.8.1</version>
+            <scope>test</scope>
+        </dependency> 
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>javax.json</artifactId>
