670_health_checks_with_docker

--- a/blogpad/docker-compose.yaml
+++ b/blogpad/docker-compose.yaml
@@ -6,6 +6,11 @@ services:
     environment: 
       - "JAEGER_HOST=jaeger"
       - "CONTENT_MP_REST_URL=http://content:8080/content/resources"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9990/health"]
+      interval: 5s
+      timeout: 1s
+      retries: 3
     ports:
     - "8080:8080"
     - "9990:9990"
@@ -14,6 +19,11 @@ services:
     container_name: content    
     environment: 
       - "JAEGER_HOST=jaeger"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9990/health"]
+      interval: 5s
+      timeout: 1s
+      retries: 3
     ports:
     - "8081:8080"
     - "9991:9990"
