690_graal_vm_js_spg_intro

--- a/blogpad/reactor/reactor/pom.xml
+++ b/blogpad/reactor/reactor/pom.xml
@@ -24,6 +24,12 @@
             <version>5.6.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.graalvm.js</groupId>
+            <artifactId>js</artifactId>
+            <version>20.1.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
