--- a/blogpad/reactor/reactor/src/main/resources/META-INF/microprofile-config.properties
+++ b/blogpad/reactor/reactor/src/main/resources/META-INF/microprofile-config.properties
@@ -1,2 +1,4 @@
 message=Enjoy
 content/mp-rest/url=http://localhost:8080/content/resources
+content/mp-rest/readTimeout=1000
+content/mp-rest/connectTimeout=1000
